# HRMS

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  FRONTEND_INTEGRATION_UNSTRUCTURED.md  LICENSE  NEW_ENDPOINTS.md  README.md  app.py  auth.py  config.py  connectors.py  constants.py  database.py  db_utils.py  docker-compose.local.yml  docker-compose.yml  main.py  models.py  ocr_test_output.txt  pii_scans.db  pyproject.toml  requirements.txt  schemas.py  test_azure_di.py  test_image_pii.py
docs/: PIPELINE_OBSERVABILITY_README.md
migrations/: env.py
migrations/versions/: a0446fa2e830_initial_migration.py
parsers/: base.py
parsers/structured/: csv_parser.py  excel_parser.py
parsers/unstructured/: access_parser.py  document_parser.py  sql_parser.py
routers/: connections.py  dashboard.py  data.py  files.py  redact.py  scan.py  scan_connector.py  scans.py
sample/: Processed Interview Transcript_Kathy Peters.docx
sample/output/: image_scan_report.csv  image_scan_report.json
services/: bbox_mapper.py  content_reconstruction.py  detection_dispatcher.py  entities.py  entity_resolution.py  ingestion_dispatcher.py  job_store.py  language_detector.py  ocr_engine.py  ocr_normalizer.py  ocr_validator.py  ocr_worker.py  output_schema.py  pii_analytics.py  pii_service.py  pipeline_context.py  pipeline_manager.py  pipeline_runner.py  post_processor.py  progress_tracker.py  redaction_engine.py  text_normalizer.py  validator.py
services/engines/: __init__.py  base_engine.py  gliner_engine.py  llm_engine.py  otter_engine.py  qwen_ner_engine.py  regex_engine.py
services/pii_engine/: __init__.py  pipeline_runner.py
services/pii_engine/core/: __init__.py  pipeline_context.py
services/pii_engine/utils/: __init__.py  debug_dumper.py  logger.py  (+1 more)
services/utils/: __init__.py  timeout.py
tests/: test_file_parsing_matrix.py  test_llm_pii_baseline.py  test_pdf_parser.py  test_pii_service.py  test_sample_images.py
tests/benchmarks/: test_performance.py
tests/fixtures/: ground_truth_manifest.json  sample_contact.csv  sample_employee.txt  sample_financial.txt  sample_multilingual.txt
utils/: text_chunker.py
(+2 files in other folders)
