[tool.poetry]
name = "vault-migration-service"
version = "0.1.0"
description = ""
authors = ["yaswanthsaivendra <yaswanthsaivendra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
sqlalchemy = "^2.0.35"
psycopg2 = "^2.9.9"
pymysql = "^1.1.1"
cx-oracle = "^8.3.0"
pymssql = "^2.3.1"
flask-cors = "*" 


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
