[tool.poetry]
name = "vault-migration-service"
version = "0.1.0"
description = ""
authors = ["yaswanthsaivendra <yaswanthsaivendra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
sqlalchemy = "^2.0.35"
pymysql = "^1.1.1"
pymssql = "^2.3.1"
flask-cors = "^5.0.0"
requests = "^2.32.3"
pymongo = "^4.11.1"
google-auth-oauthlib = "^1.2.1"
google-api-python-client = "^2.162.0"
imaplib2 = "^3.6"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"
psycopg = {extras = ["binary"], version = "^3.2.6"}
openpyxl = "^3.1.5"
python-docx = "^1.1.2"
pypdf2 = "^3.0.1"
pycryptodome = "^3.22.0"
pyodbc = "^5.2.0"
pytesseract = "^0.3.13"
pdf2image = "^1.17.0"
pypandoc = "^1.15"
python-pptx = "^1.0.2"
py = "^1.11.0"
py7zr = "^0.22.0"
rarfile = "^4.2"
patool = "^4.0.0"
opencv-python = "^4.11.0.86"
psycopg2-binary = "^2.9.10"
flask-migrate = "^4.1.0"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
